# binutils-apple

./: .gitignore  AUTHORS  Makefile.am  README  bootstrap.sh  configure.ac  initialize.sh
ar/: Makefile.am  archive.c  contents.c  misc.c
as/: Makefile.am  arm.c  as.c  bignum.h  driver.c  dwarf2dbg.c  input-scrub.c  read.c  relax.h  sections.c
as/arm/: Makefile.am
as/arm64/: Makefile.am
as/hppa/: Makefile.am
as/i386/: Makefile.am
as/i860/: Makefile.am
as/m68k/: Makefile.am
as/m88k/: Makefile.am
as/ppc/: Makefile.am
as/ppc64/: Makefile.am
as/sparc/: Makefile.am
as/x86_64/: Makefile.am
cctools-839/: Makefile.am  configure.ac
cctools-839/ar/: Makefile.am
cctools-839/as/: Makefile.am
cctools-839/as/arm/: Makefile.am
cctools-839/as/i386/: Makefile.am
cctools-839/as/ppc/: Makefile.am
cctools-839/as/ppc64/: Makefile.am
cctools-839/as/x86_64/: Makefile.am
cctools-839/ld/: Makefile.am
cctools-839/libstuff/: Makefile.am
cctools-839/misc/: Makefile.am
cctools-839/otool/: Makefile.am
cctools-845/: Makefile.am
cctools-845/ar/: Makefile.am  contents.c
cctools-845/as/: Makefile.am
cctools-845/as/arm/: Makefile.am
cctools-845/as/i386/: Makefile.am
cctools-845/as/ppc/: Makefile.am
cctools-845/as/ppc64/: Makefile.am
cctools-845/as/x86_64/: Makefile.am
cctools-845/include/stuff/: bytesex.h  llvm.h
cctools-845/ld/: Makefile.am
cctools-845/libstuff/: Makefile.am  execute.c
cctools-845/man/: Makefile.am
cctools-845/misc/: Makefile.am  libtool.c
cctools-845/otool/: Makefile.am
include/emulated/: darwin.h  mach-o.h  mach.h  mach_absolute_time.h  mach_time.h  strlcat.h  strlcpy.h  strmode.h
include/foreign/: extern.h
include/llvm-c/: Disassembler.h
include/mach/: machine.h
include/mach-o/: dyld.h  loader.h
include/mach/i386/: _structs.h
include/mach/ppc/: _structs.h  thread_status.h
include/stuff/: allocate.h  best_arch.h  breakout.h  bytesex.h  errors.h  execute.h  hash_string.h  hppa.h  llvm.h  ofile.h  print.h  reloc.h  rnd.h  vm_flush_cache.h
ld/: 4byte_literals.h  Makefile.am  arm_reloc.c  arm_reloc.h  cstring_literals.c  dylibs.c  fvmlibs.c  generic_reloc.h  hppa_reloc.c  layout.c  ld.c  ld.h  mod_sections.c  objects.c  objects.h  pass1.c  pass1.h  pass2.c  rld.c  sections.c  sections.h  specs.c  symbols.c  symbols.h  uuid.c
ld64/: InputFiles.cpp  LinkEdit.hpp  Makefile.am  Options.cpp  Options.h  OutputFile.cpp  SymbolTable.cpp  compile_stubs.h  configure.h  ld.cpp  ld.hpp  lto_file.hpp
ld64-136/src/3rd/: Makefile.am  helper.h
ld64-136/src/ld/: InputFiles.h  LinkEditClassic.hpp  Makefile.am  Options.cpp  Options.h  OutputFile.cpp  Resolver.h  SymbolTable.cpp  SymbolTable.h  ld.cpp
ld64-136/src/ld/code-sign-blobs/: memutils.h
ld64-136/src/ld/parsers/: Makefile.am  archive_file.cpp  lto_file.cpp  macho_dylib_file.cpp  macho_relocatable_file.cpp
ld64-136/src/ld/passes/: Makefile.am  dtrace_dof.cpp  order.cpp
ld64-136/src/other/: Makefile.am  dyldinfo.cpp  machochecker.cpp  unwinddump.cpp
ld64-224.1/: configure.ac
ld64-224.1/src/3rd/: Makefile.am
ld64-224.1/src/ld/: InputFiles.cpp  Makefile.am  Options.cpp  Options.h
ld64-224.1/src/ld/passes/: Makefile.am  objc.cpp  tlvp.cpp
ld64-224.1/src/ld/passes/stubs/: stubs.cpp
ld64-224.1/src/other/: Makefile.am
ld64/3rd/: Makefile.am  helper.h
ld64/abstraction/: MachOFileAbstraction.hpp  MachOTrie.hpp
ld64/code-sign-blobs/: blob.h  endian.h  memutils.h
ld64/other/: Makefile.am  ObjectDump.cpp  PruneTrie.cpp  dyldinfo.cpp  machochecker.cpp  rebase.cpp  unwinddump.cpp
ld64/parsers/: Makefile.am  lto_file.cpp  macho_dylib_file.cpp  macho_relocatable_file.cpp  textstub_dylib_file.cpp
ld64/parsers/libunwind/: InternalMacros.h
ld64/passes/: Makefile.am  bitcode_bundle.cpp  branch_island.cpp  compact_unwind.cpp  dylibs.cpp  got.cpp  huge.cpp  objc.cpp  order.cpp  tlvp.cpp
ld64/passes/stubs/: stubs.cpp
ld64/src/: Makefile.am
ld64/src/ld/: Makefile.am
ld64/src/ld/code-sign-blobs/: Makefile.am
ld64/src/ld/parsers/: Makefile.am
ld64/src/ld/passes/: Makefile.am
ld64/src/other/: Makefile.am
libemulated/: Makefile.am  darwin.c  mach-o.c  mach.c  mach_absolute_time.c  mach_time.c
libstuff/: Makefile.am  allocate.c  apple_version.c  arch.c  arch_usage.c  best_arch.c  breakout.c  bytesex.c  checkout.c  coff_bytesex.c  crc32.c  errors.c  execute.c  fatal_arch.c  fatals.c  get_arch_from_host.c  get_toc_byte_sex.c  guess_short_name.c  hash_string.c  hppa.c  llvm.c  lto.c  macosx_deployment_target.c  ofile.c  ofile_error.c  ofile_get_word.c  print.c  reloc.c  rnd.c  set_arch_flag_name.c  swap_headers.c  symbol_list.c  unix_standard_mode.c  version_number.c  vm_flush_cache.c  writeout.c
man/: Makefile.am  ld.1
misc/: Makefile.am  cmpdylib.c  libtool.c  lipo.c  pagestuff.c  redo_prebinding.c  segedit.c  strip.c
otool/: Makefile.am  arm64_disasm.h  i386_disasm.h  main.c  ofile_print.h  print_bitcode.c  print_objc.c
patches/: ar-archive.patch  ar-contents.patch  ar-misc.patch  as-arm.patch  as-driver.patch  as-dwarf2dbg.patch  as-i386.patch  as-read.patch  as-sections.patch  include-i386-_types.patch  include-mach-mig_errors.patch  ld64-abstraction-MachOTrie.patch  ld64-ld-AddressSpace.patch  ld64-ld-HeaderAndLoadCommands.patch  ld64-ld-InputFiles.patch  ld64-ld-Options.patch  ld64-ld-OutputFile.patch  ld64-ld-Registers.patch  ld64-ld-Resolver.patch  ld64-ld-Snapshot.patch  ld64-ld-archive_file.patch  ld64-ld-blob.patch  ld64-ld-branch_island.patch  ld64-ld-dtrace_dof.patch  ld64-ld-ld.patch  ld64-ld-lto_file.patch  ld64-ld-macho_relocatable_file.patch  ld64-ld-memutils.patch  ld64-other-ObjectDump.patch  ld64-other-PruneTrie.patch  ld64-other-machocheck.patch  ld64-other-rebase.patch  libemulated-strlcat.patch  libemulated-strlcpy.patch  libemulated-strmode.patch  libstuff-execute.patch  libstuff-llvm.patch  libstuff-lto.patch  libstuff-seg_addr_table.patch  libstuff-writeout.patch  (+5 more)
patches/gentoo/4.3/: binutils-apple-4.3-lto-prefix.patch  binutils-apple-4.3-makefile-target-warning.patch  ld64-128.2-Makefile-3  ld64-128.2-ppc.patch  (+1 more)
(+15 files in other folders)
